fix: full width header border on mobile

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -18,10 +18,19 @@
   bottom: 0;
   left: 0;
 }
+
 @media (max-width: 768px) {
   .header {
     padding: 28px 0 30px;
     box-sizing: border-box;
+  }
+}
+
+@media (max-width: 450px) {
+  .header::after {
+    width: calc(100vw - 17px);
+    left: 50%;
+    transform: translate(-50%, 0);
   }
 }
 
